--- a/HotelBooking--Backend/package.json
+++ b/HotelBooking--Backend/package.json
@@ -7,7 +7,8 @@
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "seed": "node src/scripts/seedData.js",
+    "seed": "node src/scripts/seed-mysql.js",
+    "seed:admin": "node src/scripts/seed-admin.js",
     "setup-db": "node setup-database.js",
     "setup-db:force": "node setup-database.js --force"
   },
